--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content ="A pure coffee-blog. With lots of coffee knowledge, guides and answers to all your coffee questions">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Limelight&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Limelight&family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Limelight&family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet">   
     <link href="css/global.css" rel="stylesheet">
     <link href="css/index.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/39e20b04f8.js"crossorigin="anonymous"></script>
@@ -26,7 +24,7 @@
             <div class="dropdown-menu">
                 <label for="hamburger-menu"><i class="fas fa-bars"></i></label>
                 <input type="checkbox" id="hamburger-menu">
-                <nav>
+                <nav aria-label="Main">
                     <ul>
                         <li><a  href="index.html" class="active">Home</a></li>
                         <li><a  href="posts.html">Posts</a></li>
@@ -36,8 +34,8 @@
             </div>
         </header>
         <main>
-            <h1>Learn the secrets of coffee</h1>
-            <h2>Learn, make & drink</h2>
+            <h1>Learn the secrets of Coffee</h1>
+            <h2>Learn - Make - Drink</h2>
             <div id="index-cta-padding">
                 <a href="posts.html" type="button">
                     <div class="index-cta">
@@ -45,9 +43,9 @@
                     </div>
                 </a>
             </div>
-            </div>
+        </div>
             <div id="index-bottom-background">
-                <h3>Browse some of my posts</h3>
+                <h3>Browse some posts</h3>
                 <div id="carousel-arrows">
                     <i class="fas fa-chevron-left"></i>
                     <i class="fas fa-chevron-right"></i>
@@ -57,5 +55,33 @@
                 </div>
             </div>
         </main>
+    <footer>
+        <h4>
+            Get notified of new posts!
+        </h4>
+        <label for="email">Your email:</label>
+        <input type="email" id="email"/>
+        <button type="submit">Subscribe</button>
+        <div id="social-icons">
+            <i class="fab fa-facebook"></i>
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-twitter"></i>
+        </div>
+        <a href="index.html">
+            <img src="images/dark-logo.png" id="logo" 
+            alt="The Bean's logo. The bean written in white with a 
+            couple of coffeebeans next to it, and the words 
+            `Life begins after coffee underneath`">
+        </a>
+        <div id="footer-nav" role="navigation" aria-label="footer">
+            <ul>
+                <li><a href="contact.html">Contact me</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="posts.html">Blog posts</a></li>
+            </ul>
+        </div>
+        <p><a></a>    
+    </footer>
 </body>
+
 </html>
