--- a/specific-post.html
+++ b/specific-post.html
@@ -10,6 +10,24 @@
     <title>The Bean | Home</title> 
 </head>
 <body>
-    
+    <header>
+        <a href="index.html">
+            <img src="images/thebean-logo.png" id="logo" 
+            alt="The Bean's logo. The bean written in white with a 
+            couple of coffeebeans next to it, and the words 
+            `Life begins after coffee underneath`">
+        </a>
+        <div class="dropdown-menu">
+            <label for="hamburger-menu"><i class="fas fa-bars"></i></label>
+            <input type="checkbox" id="hamburger-menu">
+            <nav aria-label="Main">
+                <ul>
+                    <li><a  href="index.html" class="active">Home</a></li>
+                    <li><a  href="posts.html">Posts</a></li>
+                    <li><a  href="about.html">About</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 </body>
 </html>
