--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content ="A pure coffee-blog. With lots of coffee knowledge, guides and answers to all your coffee questions">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Limelight&family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet">   
+    <link href="https://fonts.googleapis.com/css2?family=Antonio:wght@100;200;300;400;500;600;700&family=Cormorant+SC:wght@300;400;500;600;700&family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet">    
     <link href="css/global.css" rel="stylesheet">
     <link href="css/index.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/39e20b04f8.js"crossorigin="anonymous"></script>
@@ -29,13 +29,14 @@
                         <li><a  href="index.html" class="active">Home</a></li>
                         <li><a  href="posts.html">Posts</a></li>
                         <li><a  href="about.html">About</a></li>
+                        <li><a  href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
             </div>
         </header>
         <main>
             <h1>Learn the secrets of Coffee</h1>
-            <h2>Learn - Make - Drink</h2>
+            <h2>Learn, make & drink</h2>
             <div id="index-cta-padding">
                 <a href="posts.html" type="button">
                     <div class="index-cta">
