--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     </div>
                 </a>
             </div>
-        </div>
+    </div>
             <div id="index-bottom-background">
                 <h3>Browse some posts</h3>
                 <div id="carousel-arrows">
@@ -54,32 +54,45 @@
                 <div id="post-carousel">
                     <div class="loader"></div>  
                 </div>
+                <div class="center-align">
+                    <a href="posts.html">
+                        <button class="cta" type="button">All posts</button>
+                    </a>
+                </div>
             </div>
         </main>
     <footer>
-        <h4>
-            Get notified of new posts!
-        </h4>
-        <label for="email">Your email:</label>
-        <input type="email" id="email"/>
-        <button type="submit">Subscribe</button>
-        <div id="social-icons">
-            <i class="fab fa-facebook"></i>
-            <i class="fab fa-instagram"></i>
-            <i class="fab fa-twitter"></i>
-        </div>
-        <a href="index.html">
-            <img src="images/dark-logo.png" id="logo" 
-            alt="The Bean's logo. The bean written in white with a 
-            couple of coffeebeans next to it, and the words 
-            `Life begins after coffee underneath`">
-        </a>
-        <div id="footer-nav" role="navigation" aria-label="footer">
-            <ul>
-                <li><a href="contact.html">Contact me</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="posts.html">Blog posts</a></li>
-            </ul>
+        <div id="footer-container">
+            <div class="footer-email-form">
+                <h4>
+                    Get notified of new posts!
+                </h4>
+                <form action="submit.php" method="POST">
+                    <label for="email">Your email:</label>
+                    <input type="email" id="email"/>
+                    <button type="submit">Subscribe</button>
+                </form>
+                <div id="social-icons">
+                    <a href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
+                    <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+                    <a href="https://twitter.com/twitter"><i class="fab fa-twitter"></i></a>
+                </div>
+            </div>
+            <div class="footer-nav">
+                <a href="index.html">
+                    <img src="images/dark-logo.png" id="footer-logo" 
+                    alt="The Bean's logo. The bean written in white with a 
+                    couple of coffeebeans next to it, and the words 
+                    `Life begins after coffee underneath`">
+                </a>
+                <div id="footer-nav" role="navigation" aria-label="footer">
+                    <ul>
+                        <li><a href="contact.html">Contact me</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="posts.html">Blog posts</a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
         <p><a></a>    
     </footer>
