--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     <link href="css/global.css" rel="stylesheet">
     <link href="css/contact.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/39e20b04f8.js"crossorigin="anonymous"></script>
-    <title>The Bean | Home</title> 
+    <title>The Bean | Contact</title> 
 </head>
 <body>
     <header id="header-background-image">
@@ -25,10 +25,10 @@
             <input type="checkbox" id="hamburger-menu">
             <nav aria-label="Main">
                 <ul>
-                    <li><a  href="index.html" class="active">Home</a></li>
+                    <li><a  href="index.html">Home</a></li>
                     <li><a  href="posts.html">Posts</a></li>
                     <li><a  href="about.html">About</a></li>
-                    <li><a  href="contact.html">Contact</a></li>
+                    <li><a  href="contact.html" class="active">Contact</a></li>
                 </ul>
             </nav>
         </div>
