--- a/about.html
+++ b/about.html
@@ -25,9 +25,9 @@
             <input type="checkbox" id="hamburger-menu">
             <nav aria-label="Main">
                 <ul>
-                    <li><a  href="index.html" class="active">Home</a></li>
+                    <li><a  href="index.html">Home</a></li>
                     <li><a  href="posts.html">Posts</a></li>
-                    <li><a  href="about.html">About</a></li>
+                    <li><a  href="about.html" class="active">About</a></li>
                     <li><a  href="contact.html">Contact</a></li>
                 </ul>
             </nav>
@@ -72,9 +72,7 @@
                 <p>
                     Lorem ipsum dolor sit amet, consetetur sadipscing elitr, 
                     sed diam nonumy eirmod tempor invidunt ut labore et dolore 
-                    diam nonumy eirmod tempor invidunt ut labore et dolore 
-                </p>
-                <p>
+                    diam nonumy eirmod tempor invidunt ut labore et dolore
                     Lorem ipsum dolor sit amet, consetetur sadipscing elitr, 
                     sed diam nonumy eirmod tempor invidunt ut labore et dolore 
                     diam nonumy eirmod tempor invidunt ut labore et dolore 
@@ -82,9 +80,7 @@
                 <p>
                     Lorem ipsum dolor sit amet, consetetur sadipscing elitr, 
                     sed diam nonumy eirmod tempor invidunt ut labore et dolore 
-                    diam nonumy eirmod tempor invidunt ut labore et dolore 
-                </p>
-                <p>
+                    diam nonumy eirmod tempor invidunt ut labore et dolore
                     Lorem ipsum dolor sit amet, consetetur sadipscing elitr, 
                     sed diam nonumy eirmod tempor invidunt ut labore et dolore 
                     diam nonumy eirmod tempor invidunt ut labore et dolore 
