--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
                     <button type="submit">Subscribe</button>
                 </form>
                 <div id="social-icons">
-                    <a href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
-                    <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
-                    <a href="https://twitter.com/twitter"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.facebook.com/" aria-label="facebook"><i class="fab fa-facebook"></i></a>
+                    <a href="https://www.instagram.com/" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                    <a href="https://twitter.com/twitter" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
                 </div>
             </div>
             <div class="footer-nav">
