--- a/posts.html
+++ b/posts.html
@@ -25,8 +25,8 @@
             <input type="checkbox" id="hamburger-menu">
             <nav aria-label="Main">
                 <ul>
-                    <li><a  href="index.html" class="active">Home</a></li>
-                    <li><a  href="posts.html">Posts</a></li>
+                    <li><a  href="index.html">Home</a></li>
+                    <li><a  href="posts.html" class="active">Posts</a></li>
                     <li><a  href="about.html">About</a></li>
                     <li><a  href="contact.html">Contact</a></li>
                 </ul>
