--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
             </div>
     </div>
             <div id="index-bottom-background">
-                <h3>Browse some posts</h3>
+                <h3>Latest posts</h3>
                 <div id="carousel-arrows">
                     <i class="fas fa-chevron-left"></i>
                     <i class="fas fa-chevron-right"></i>
                 </div>
-                <div id="post-carousel">
+                <div id="posts-carousel">
                     <div class="loader"></div>  
                 </div>
                 <div class="center-align">
@@ -64,9 +64,9 @@
     <footer>
         <div id="footer-container">
             <div class="footer-email-form">
-                <h4>
+                <h5>
                     Get notified of new posts!
-                </h4>
+                </h5>
                 <form action="submit.php" method="POST">
                     <label for="email">Your email:</label>
                     <input type="email" id="email"/>
@@ -96,6 +96,7 @@
         </div>
         <p><a></a>    
     </footer>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
