--- a/specific-post.html
+++ b/specific-post.html
@@ -10,7 +10,7 @@
     <link href="css/global.css" rel="stylesheet">
     <link href="css/index.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/39e20b04f8.js"crossorigin="anonymous"></script>
-    <title>The Bean | Home</title> 
+    <title>The Bean | Blog-post</title> 
 </head>
 <body>
     <header>
