--- a/posts.html
+++ b/posts.html
@@ -37,7 +37,9 @@
         <h1>All my coffee posts</h1>
         <h2>Full of caffein</h2>
         <p></p>
-        <div id="posts-container"></div>
+        <div class="posts-container">
+            <div class="loader"></div>
+        </div>
     </main>
     <footer>
         <div id="footer-container">
@@ -74,5 +76,6 @@
         </div>
         <p><a></a>    
     </footer>
+    <script src="js/script.js"></script>
 </body>
 </html>
