--- a/posts.html
+++ b/posts.html
@@ -36,8 +36,11 @@
     <main>
         <h1>All my coffee posts</h1>
         <h2>Full of caffein</h2>
-        <p></p>
-        <div class="posts-container">
+        <p>
+            Cappuccino milk filter bar sit french rich Black fair Aged, 
+            seasonal crema barista steamed cultivar instant single saucer skinny.
+        </p>
+        <div class="blog-list-container">
             <div class="loader"></div>
         </div>
     </main>
@@ -76,6 +79,6 @@
         </div>
         <p><a></a>    
     </footer>
-    <script src="js/script.js"></script>
+    <script src="js/posts.js"></script>
 </body>
 </html>
