--- a/posts.html
+++ b/posts.html
@@ -34,15 +34,21 @@
         </div>
     </header>
     <main>
-        <h1>All my coffee posts</h1>
-        <h2>Full of caffein</h2>
-        <p>
-            Cappuccino milk filter bar sit french rich Black fair Aged, 
-            seasonal crema barista steamed cultivar instant single saucer skinny.
-        </p>
+        <div class="container-text-width">
+            <h1>All my coffee posts</h1>
+            <h2>Full of caffein</h2>
+            <p>
+                Cappuccino milk filter bar sit french rich Black fair Aged, 
+                seasonal crema barista steamed cultivar instant single saucer skinny.
+            </p>
+            <p>Enjoy</p>
+        </div>
         <div class="blog-list-container">
             <div class="loader"></div>
         </div>
+        <div id="more-posts-button">
+            <button type="button">More posts</button>
+        </div>   
     </main>
     <footer>
         <div id="footer-container">
