--- a/posts.html
+++ b/posts.html
@@ -34,7 +34,7 @@
         </div>
     </header>
     <main>
-        <div class="container-text-width">
+        <div class="top-text-width">
             <h1>All my coffee posts</h1>
             <h2>Full of caffein</h2>
             <p>
@@ -47,7 +47,7 @@
             <div class="loader"></div>
         </div>
         <div id="more-posts-button">
-            <button type="button">More posts</button>
+            <button id="more-button" type="button">More posts</button>
         </div>   
     </main>
     <footer>
