--- a/contact.html
+++ b/contact.html
@@ -20,17 +20,20 @@
             couple of coffeebeans next to it, and the words 
             `Life begins after coffee underneath`">
         </a>
-        <div class="dropdown-menu">
-            <label for="hamburger-menu"><i class="fas fa-bars"></i></label>
+        <div id="menu-and-icons">
+            <label type="button" for="hamburger-menu"><i tabindex="0" class="fas fa-bars"></i></label>
             <input type="checkbox" id="hamburger-menu">
             <nav aria-label="Main">
                 <ul>
-                    <li><a  href="index.html">Home</a></li>
+                    <li><a  href="index.html" class="active">Home</a></li>
                     <li><a  href="posts.html">Posts</a></li>
                     <li><a  href="about.html">About</a></li>
-                    <li><a  href="contact.html" class="active">Contact</a></li>
+                    <li><a  href="contact.html">Contact</a></li>
                 </ul>
             </nav>
+            <a href="https://www.facebook.com/" aria-label="facebook"><i class="fab fa-facebook"></i></a>
+            <a href="https://www.instagram.com/" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+            <a href="https://twitter.com/twitter" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
         </div>
     </header>
     <main>
