--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 couple of coffeebeans next to it, and the words 
                 `Life begins after coffee underneath`">
             </a>
-            <div class="dropdown-menu">
+            <div id="menu-and-icons">
                 <label type="button" for="hamburger-menu"><i tabindex="0" class="fas fa-bars"></i></label>
                 <input type="checkbox" id="hamburger-menu">
                 <nav aria-label="Main">
@@ -32,6 +32,9 @@
                         <li><a  href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
+                <a href="https://www.facebook.com/" aria-label="facebook"><i class="fab fa-facebook"></i></a>
+                <a href="https://www.instagram.com/" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                <a href="https://twitter.com/twitter" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
             </div>
         </header>
         <main>
