--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                 `Life begins after coffee underneath`">
             </a>
             <div id="menu-and-icons">
-                <label type="button" for="hamburger-menu"><i tabindex="0" class="fas fa-bars"></i></label>
-                <input type="checkbox" id="hamburger-menu">
+                <label for="hamburger-menu"><i tabindex="0" class="fas fa-bars"></i></label>
+                <input type="checkbox" id="hamburger-menu" role="navigation">
                 <nav aria-label="Main">
                     <ul>
                         <li><a  href="index.html" class="active">Home</a></li>
@@ -51,8 +51,8 @@
             <div id="index-bottom-background">
                 <h3>Latest posts</h3>
                 <div id="carousel-arrows">
-                    <i type="button" aria-label="left-carousel-arrow" class="fas fa-chevron-left"></i>
-                    <i  tabindex="0" type="button" aria-label="right-carousel-arrow" class="fas fa-chevron-right"></i>
+                    <a tabindex="0"><i type="button" aria-label="left-carousel-arrow" class="fas fa-chevron-left"></i></a>
+                    <a  tabindex="0"><i type="button" aria-label="right-carousel-arrow" class="fas fa-chevron-right"></i></a>
                 </div>
                 <div id="posts-carousel">
                     <div class="loader"></div>  
