--- a/specific-post.html
+++ b/specific-post.html
@@ -37,6 +37,7 @@
         </div>
     </header>
     <main>
+        <div id="modal-container"></div>
         <div id="chosen-post-container">
             <div class="loader"></div>
         </div>
