--- a/contact.html
+++ b/contact.html
@@ -17,18 +17,18 @@
         <a href="index.html">
             <img src="images/thebean-logo.png" id="logo" 
             alt="The Bean's logo. The bean written in white with a 
-            couple of coffeebeans next to it, and the words 
-            `Life begins after coffee underneath`">
+            couple of coffeebeans next to it, and the words
+            `Life begins after coffee´ underneath">
         </a>
         <div id="menu-and-icons">
             <label type="button" for="hamburger-menu"><i tabindex="0" class="fas fa-bars"></i></label>
             <input type="checkbox" id="hamburger-menu">
             <nav aria-label="Main">
                 <ul>
-                    <li><a  href="index.html" class="active">Home</a></li>
+                    <li><a  href="index.html">Home</a></li>
                     <li><a  href="posts.html">Posts</a></li>
                     <li><a  href="about.html">About</a></li>
-                    <li><a  href="contact.html">Contact</a></li>
+                    <li><a  href="contact.html" class="active">Contact</a></li>
                 </ul>
             </nav>
             <a href="https://www.facebook.com/" aria-label="facebook"><i class="fab fa-facebook"></i></a>
