--- a/about.html
+++ b/about.html
@@ -76,17 +76,18 @@
                     Lorem ipsum dolor sit amet, consetetur sadipscing elitr, 
                     sed diam nonumy eirmod tempor invidunt ut labore et dolore 
                     diam nonumy eirmod tempor invidunt ut labore et dolore
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, 
-                    sed diam nonumy eirmod tempor invidunt ut labore et dolore 
-                    diam nonumy eirmod tempor invidunt ut labore et dolore 
+                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr.
                 </p>
                 <p>
                     Lorem ipsum dolor sit amet, consetetur sadipscing elitr, 
                     sed diam nonumy eirmod tempor invidunt ut labore et dolore 
                     diam nonumy eirmod tempor invidunt ut labore et dolore
+                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr.
+                </p>
+                <p>
                     Lorem ipsum dolor sit amet, consetetur sadipscing elitr, 
                     sed diam nonumy eirmod tempor invidunt ut labore et dolore 
-                    diam nonumy eirmod tempor invidunt ut labore et dolore 
+                    diam nonumy eirmod tempor invidunt ut labore et dolore.
                 </p>
             </div>
         </section>
