--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content ="A pure coffee-blog. With lots of coffee knowledge, guides and answers to all your coffee questions">
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Monsieur+La+Doulaise&display=swap" rel="stylesheet">   
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Antonio:wght@100;200;300;400;500;600;700&family=Cormorant+SC:wght@300;400;500;600;700&family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet">    
     <link href="css/global.css" rel="stylesheet">
     <link href="css/index.css" rel="stylesheet">
@@ -55,7 +57,9 @@
                     <a tabindex="0"><i type="button" aria-label="right-carousel-arrow" class="fas fa-chevron-right"></i></a>
                 </div>
                 <div id="posts-carousel">
-                    <div class="loader"></div>  
+                    <div class="loader">
+                        <i class="fas fa-mug-hot"></i>
+                    </div>
                 </div>
                 <div class="center-align">
                     <a href="posts.html">
