--- a/posts.html
+++ b/posts.html
@@ -47,10 +47,12 @@
             <p>Enjoy</p>
         </div>
         <div class="blog-list-container">
-            <div class="loader"></div>
+            <div class="loader">
+                <i class="fas fa-mug-hot"></i>
+            </div>
         </div>
         <div id="more-posts-button">
-            <button id="more-button" type="button">More posts</button>
+            <button id="more-button" class="cta" type="button">More posts</button>
         </div>   
     </main>
     <footer>
