--- a/specific-post.html
+++ b/specific-post.html
@@ -39,7 +39,9 @@
     <main>
         <div id="modal-container"></div>
         <div id="chosen-post-container">
-            <div class="loader"></div>
+            <div class="loader">
+                <i class="fas fa-mug-hot"></i>
+            </div>
         </div>
     </main>
     <footer>
