--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content ="A pure coffee-blog. With lots of coffee knowledge, guides and answers to all your coffee questions">
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Antonio:wght@100;200;300;400;500;600;700&family=Monsieur+La+Doulaise&family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet">     
+    <link href="https://fonts.googleapis.com/css2?family=Antonio:wght@100;200;300;400;500;600;700&family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&family=Tangerine:wght@400;700&display=swap" rel="stylesheet">     
     <link href="css/global.css" rel="stylesheet">
     <link href="css/index.css" rel="stylesheet">
     <!-- icons source -->
