--- a/posts.html
+++ b/posts.html
@@ -57,7 +57,7 @@
                 Cappuccino milk filter bar sit french rich Black fair Aged, 
                 seasonal crema barista steamed cultivar instant single saucer skinny.
             </p>
-            <p>Enjoy</p>
+            <p id="add-serif-font">Enjoy!</p>
         </div>
         <div class="blog-list-container">
             <div class="loader">
@@ -103,6 +103,7 @@
         </div>
         <p><a></a>    
     </footer>
+    <script src="js/global.js"></script>
     <script src="js/posts.js"></script>
 </body>
 </html>
