Burgermenu and footer
- made burger icon, instead of using fontawesome.com.
- added function to toggle class when clicked, to change to an X.
- Worked on responsivenes for footer

--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,13 @@
             `Life begins after coffee´ underneath">
         </a>
         <div id="menu-and-icons">
-            <label type="button" for="hamburger-menu"><i tabindex="0" class="fas fa-bars"></i></label>
+            <label for="hamburger-menu">
+                <div class="burger-menu-container">
+                    <div class="bar1"></div>
+                    <div class="bar2"></div>
+                    <div class="bar3"></div>
+                </div>
+            </label>
             <input type="checkbox" id="hamburger-menu">
             <nav aria-label="Main">
                 <ul>
@@ -102,7 +108,7 @@
                 </div>
             </div>
         </div>
-        <p><a></a>    
+        <div id="footer-copyright">&copy;Endre Makra-Stenkløv 2021</div>    
     </footer>
     <script src="js/global.js"></script>
     <script src="js/contact.js"></script>
