--- a/about.html
+++ b/about.html
@@ -34,13 +34,19 @@
             `Life begins after coffee underneath`">
         </a>
         <div id="menu-and-icons">
-            <label type="button" for="hamburger-menu"><i tabindex="0" class="fas fa-bars"></i></label>
+            <label for="hamburger-menu">
+                <div class="burger-menu-container">
+                    <div class="bar1"></div>
+                    <div class="bar2"></div>
+                    <div class="bar3"></div>
+                </div>
+            </label>
             <input type="checkbox" id="hamburger-menu">
             <nav aria-label="Main">
                 <ul>
-                    <li><a  href="index.html" class="active">Home</a></li>
+                    <li><a  href="index.html">Home</a></li>
                     <li><a  href="posts.html">Posts</a></li>
-                    <li><a  href="about.html">About</a></li>
+                    <li><a  href="about.html" class="active">About</a></li>
                     <li><a  href="contact.html">Contact</a></li>
                 </ul>
             </nav>
@@ -138,7 +144,8 @@
                 </div>
             </div>
         </div>
-        <p><a></a>    
+        <div id="footer-copyright">&copy;Endre Makra-Stenkløv 2021</div>   
     </footer>
+    <script src="js/global.js"></script>
 </body>
 </html>
