--- a/index.html
+++ b/index.html
@@ -35,7 +35,13 @@
                 `Life begins after coffee underneath`">
             </a>
             <div id="menu-and-icons">
-                <label for="hamburger-menu"><i class="fas fa-bars"></i></label>
+                <label for="hamburger-menu">
+                    <div class="burger-menu-container">
+                        <div class="bar1"></div>
+                        <div class="bar2"></div>
+                        <div class="bar3"></div>
+                    </div>
+                </label>
                 <input type="checkbox" id="hamburger-menu" role="navigation">
                 <nav aria-label="Main navigation">
                     <ul>
@@ -116,7 +122,7 @@
                 </div>
             </div>
         </div>
-        <p><a></a>    
+        <div id="footer-copyright">&copy;Endre Makra-Stenkløv 2021</div>  
     </footer>
     <script src="js/global.js"></script>
     <script src="js/script.js"></script>
